fixed title overflow

--- a/VK_home_page_styles.css
+++ b/VK_home_page_styles.css
@@ -68,7 +68,7 @@ div.title {
     text-align: center; 
     margin-right:auto; 
     margin-left: auto; 
-    width: 500px;
+    /*width: 500px;*/
 }
 div.book-button {
     line-height: 60px;
